Add configure.ac with last changes

--- a/configure.ac
+++ b/configure.ac
@@ -280,6 +280,22 @@ skins/display480/OE-A_LCDSkin_8/Makefile
 skins/display480/OE-A_LCDSkin_8/meta/Makefile
 skins/display480/OE-A_LCDSkin_9/Makefile
 skins/display480/OE-A_LCDSkin_9/meta/Makefile
+skins/display480/Lcd_Amarillo/Makefile
+skins/display480/Lcd_Amarillo/meta/Makefile
+skins/display480/Lcd_Azul/Makefile
+skins/display480/Lcd_Azul/meta/Makefile
+skins/display480/Lcd_Blanco/Makefile
+skins/display480/Lcd_Blanco/meta/Makefile
+skins/display480/Lcd_Marron/Makefile
+skins/display480/Lcd_Marron/meta/Makefile
+skins/display480/Lcd_Naranja/Makefile
+skins/display480/Lcd_Naranja/meta/Makefile
+skins/display480/Lcd_Rojo/Makefile
+skins/display480/Lcd_Rojo/meta/Makefile
+skins/display480/Lcd_Rosa/Makefile
+skins/display480/Lcd_Rosa/meta/Makefile
+skins/display480/Lcd_Verde/Makefile
+skins/display480/Lcd_Verde/meta/Makefile
 skins/display720/Makefile
 skins/display720/OE-A_LCDSkin_1/Makefile
 skins/display720/OE-A_LCDSkin_1/meta/Makefile
