--- a/skins/Makefile.am
+++ b/skins/Makefile.am
@@ -18,6 +18,10 @@ if HAVE_COLORLCD400
 SUBDIRS = display400
 endif
 
+if HAVE_COLORLCD400s
+SUBDIRS = display400
+endif
+
 if HAVE_COLORLCD220
 SUBDIRS = display220
 endif
